Update contact email in terms.html

--- a/terms.html
+++ b/terms.html
@@ -68,7 +68,7 @@
         For questions regarding these terms, contact:
     </p>
     <p>
-        Email: your-email@example.com
+        Email: muhammad.ali@diginatives.io
     </p>
 
 </body>
